# NotificationsService

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.MD  build-Debug.ninja  build-RelWithDebInfo.ninja  build-Release.ninja  build.ninja  cmake_install.cmake  docker-compose.yml  main.cpp  openapi.yaml  pg.sql
.cmake/api/v1/reply/: cache-v2-b5b6e75c6a660ad4d460.json  cmakeFiles-v1-ec47f0821967d425f64a.json  codemodel-v2-ff48d8d5ba262cf1beaa.json  index-2024-09-07T13-20-51-0035.json  target-NotificationsService-Debug-e09633c914c1c6fb8e19.json
backend/auxiliary_functions/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h
backend/email_sender/: Email_sender.cpp  Email_sender.h
backend/multithread_notification_scheduler/: Time_scheduler.cpp  Time_scheduler.h
backend/request_handler/: RequestHandler.cpp  RequestHandler.h
interface/: index.html
postgres/: PostgresProcessing.cpp  PostgresProcessing.h  pg.sql
